--- a/Examples/MAX32690/BLE_time/.vscode/settings.json
+++ b/Examples/MAX32690/BLE_time/.vscode/settings.json
@@ -94,6 +94,9 @@
     ],
     "C_Cpp.default.forcedInclude": [
         "${workspaceFolder}/build/project_defines.h"
-    ]
+    ],
+    "files.associations": {
+        "rtc.h": "c"
+    }
 }
 
